<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Skanetrafiken"
    android:id="@+id/RelativeMenu"
    android:background="#ffffff">

    <ImageButton
        android:layout_width="103dp"
        android:layout_height="85dp"
        android:layout_gravity="right|bottom"
        android:id="@+id/imageButton"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="51dp"
        android:src="@drawable/tidtab"
        android:scaleType="fitXY"
        android:padding="0dp"
        />

    <ImageButton
        android:layout_width="103dp"
        android:layout_height="85dp"
        android:id="@+id/imageButton1"
        android:layout_alignTop="@+id/imageButton2"
        android:layout_alignStart="@+id/imageButton3"
        android:src="@drawable/hallplatssok"
        android:scaleType="fitXY"
        android:padding="0dp"
        />

    <ImageButton
        android:layout_width="103dp"
        android:layout_height="85dp"
        android:layout_gravity="right|bottom"
        android:id="@+id/imageButton2"
        android:layout_marginTop="114dp"
        android:layout_below="@+id/imageButton"
        android:layout_marginEnd="40dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/biljett"
        android:scaleType="fitXY"
        android:padding="0dp"
        />

    <ImageButton
        android:layout_width="103dp"
        android:layout_height="85dp"
        android:id="@+id/imageButton3"
        android:layout_above="@+id/imageButton2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:src="@drawable/rese"
        android:scaleType="fitXY"
        android:padding="0dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reseplanerare"
        android:id="@+id/textView"
        android:layout_below="@+id/imageButton3"
        android:layout_alignStart="@+id/imageButton3"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tidtabell"
        android:id="@+id/textView2"
        android:layout_below="@+id/imageButton"
        android:layout_alignStart="@+id/imageButton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hållplatssök"
        android:id="@+id/textView3"
        android:layout_below="@+id/imageButton1"
        android:layout_alignStart="@+id/imageButton1"
      />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/biljett"
        android:id="@+id/textView4"
        android:layout_below="@+id/imageButton2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignStart="@+id/imageButton2"/>


</RelativeLayout>
